--- a/vpc_setup.yml
+++ b/vpc_setup.yml
@@ -1,23 +1,17 @@
-vpc_name: "Vprofile-vpc"
+- hosts: localhost
+  connection: local
+  gather_facts: False
+  tasks:
+    - name: Import VPC Variables
+      include_vars: vars/vpc_setup
 
-# VPC Range
-vpcCidr: '172.20.0.0/16'
-
-# Subnets Range
-PubSub1Cidr: 172.20.1.0/24
-PubSub2Cidr: 172.20.2.0/24
-PubSub3Cidr: 172.20.3.0/24
-PrivSub1Cidr: 172.20.4.0/24
-PrivSub2Cidr: 172.20.5.0/24
-PrivSub3Cidr: 172.20.6.0/24
-
-# Region Name
-region: "us-east-2"
-
-# Zone Names
-zone1: us-east-2a
-zone2: us-east-2b
-zone3: us-east-2c
-
-state: present
-
+    - name: Create vprofile VPC
+      ec2_vpc_net:
+        name: "{{vpc_name}}"
+        cidr_block: "{{vpcCidr}}"
+        region: "{{region}}"
+        dns_support: yes
+        dns_hostnames: yes
+        tenancy: default
+        state: "{{state}}"
+      register: vpcout
