--- a/bastion-instance.yml
+++ b/bastion-instance.yml
@@ -45,15 +45,11 @@
         image_id: "{{ bastion_ami }}"
         wait: yes
         wait_timeout: 300
-        instance_tags:
+        tags:
           Name: "Bastion_host"
           Project: Vprofile
           Owner: DevOps Team
         exact_count: 1
-        count_tag:
-          Name: "Bastion_host"
-          Project: Vprofile
-          Owner: DevOps Team
         security_groups:
           - "{{ BastionSG_out.group_id }}"  # Adjust based on whether you're using names or IDs
         vpc_subnet_id: "{{pubsub1id}}"
