--- a/bastion-instance.yml
+++ b/bastion-instance.yml
@@ -54,3 +54,10 @@
           - "{{ BastionSG_out.group_id }}"  # Adjust based on whether you're using names or IDs
         vpc_subnet_id: "{{pubsub1id}}"
       register: bastionHost_out
+
+      - name: Insert/Update "BastionSGid" in vars/vpc-output_vars
+        blockinfile:
+          path: vars/vpc-output_vars
+          backup: yes
+          block: |
+            BastionSGid: {{BastionSG_out.group_id}}
