--- a/vpro-ec2-stack.yml
+++ b/vpro-ec2-stack.yml
@@ -10,7 +10,7 @@
     - name: Import vprofile setup Variable
       include_vars: vars/vprostacksetup
 
-    - name: Create vprofile ec2 key
+  - name: Create vprofile ec2 key
       ec2_key:
         name: vprokey
         region: "{{region}}"
@@ -152,7 +152,7 @@
       register: db01_out
 
     - debug:
-        var: db01_out.tagged_instances[0].id
+        var: db01_out.instances[0].instance_id
 
     - local_action:
         module: ec2_elb_lb
@@ -176,11 +176,11 @@
       blockinfile:
         path: provision-stack/group_vars/hostsip
         block: |
-          web01_ip: {{ web01_out.tagged_instances[0].private_ip }}
-          app01_ip: {{ app01_out.tagged_instances[0].private_ip }}
-          rmq01_ip: {{ rmq01_out.tagged_instances[0].private_ip }}
-          mc01_ip: {{ mc01_out.tagged_instances[0].private_ip }}
-          db01_ip: {{ db01_out.tagged_instances[0].private_ip }}
+          web01_ip: {{ web01_out.instances[0].private_ip_address }}
+          app01_ip: {{ app01_out.instances[0].private_ip_address }}
+          rmq01_ip: {{ rmq01_out.instances[0].private_ip_address }}
+          mc01_ip: {{ mc01_out.instances[0].private_ip_address }}
+          db01_ip: {{ db01_out.instances[0].private_ip_address }}
 
     - name: Copy login key to provision_stack directory
       copy:
@@ -192,11 +192,11 @@
       blockinfile:
         path: provision-stack/inventory-vpro
         block: |
-          web01 ansible_host={{ web01_out.tagged_instances[0].private_ip }}
-          app01 ansible_host={{ app01_out.tagged_instances[0].private_ip }}
-          rmq01 ansible_host={{ rmq01_out.tagged_instances[0].private_ip }}
-          mc01 ansible_host={{ mc01_out.tagged_instances[0].private_ip }}
-          db01 ansible_host={{ db01_out.tagged_instances[0].private_ip }}
+          web01 ansible_host={{ web01_out.instances[0].private_ip_address }}
+          app01 ansible_host={{ app01_out.instances[0].private_ip_address }}
+          rmq01 ansible_host={{ rmq01_out.instances[0].private_ip_address }}
+          mc01 ansible_host={{ mc01_out.instances[0].private_ip_address }}
+          db01 ansible_host={{ db01_out.instances[0].private_ip_address }}
           cntl ansible_host=127.0.0.1 ansible_connection=local
 
           [websrvgrp]
