--- a/provision-stack/db.yml
+++ b/provision-stack/db.yml
@@ -1,6 +1,7 @@
 ---
 - name: Setup Mysql with accounts db and remote login
   hosts: dbsrvgrp
+  become: yes
   gather_facts: no
   tasks:
     - name: Installing Mysql Service and dependencies
